<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/appview2"
    tools:context=".ProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/profile_picture" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:layout_gravity="center"
        android:text="Bio: "
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/bio"
        android:textColor="@color/white"
        android:textSize="18sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:text="Username: "
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:text="Major: "
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@id/major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/major"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center"
            android:text="E-mail: "
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="20dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#4A2B19"
        android:text="Edit Profile" />


</LinearLayout>